<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/config_server_configuration" >

    <!-- Jenkins -->
    <PreferenceCategory android:title="@string/config_jenkins_configuration" >
        <EditTextPreference
            android:key="jenkins_base_url"
            android:title="@string/config_jenkins_base_url" />
        <EditTextPreference
            android:key="jenkins_username"
            android:title="@string/config_jenkins_username" />
        <EditTextPreference
            android:dependency="jenkins_username"
            android:key="jenkins_token"
            android:title="@string/config_jenkins_token" />
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="open_in_browser"
        android:summary="@string/config_open_in_browser_summary"
        android:title="@string/config_open_in_browser" />

    <!-- GCM -->
    <PreferenceCategory android:title="@string/config_gcm_configuration" >
        <EditTextPreference
            android:key="gcm_sender_id"
            android:title="@string/config_gcm_sender_id" />
        <Preference
            android:dependency="gcm_sender_id"
            android:key="gcm_token"
            android:title="@string/config_gcm_token" />
    </PreferenceCategory>

</PreferenceScreen>
